bug: Fix horizonal scrollbar bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 html, body {
     height: 100%;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     display: table;
 }
@@ -48,7 +48,7 @@ header {
 .navbar {
    margin: 0;
    border: 0;
-   width: 100vw;
+   width: 100%;
    height: 100px;
    background-color: #000;
    padding: 0;
@@ -139,7 +139,7 @@ header {
     position: fixed;
     top: 100px;
     left: 0;
-    width: 100vw;
+    width: 100%;
     font-weight: bold;
     font-size: 20px;
     line-height: 20px;
@@ -175,7 +175,7 @@ header {
 
 .hero-container {
     height: 80vh;
-    width: 100vw;
+    width: 100%;
     background: url(https://i.imgur.com/7IZiJzt.jpg) no-repeat bottom right fixed; /* Background hero image */
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -228,7 +228,7 @@ header {
     display: block;
     color: #000;
     background-color: #ffff00;
-    width: 100vw;
+    width: 100%;
 }
 
 /* Page content */
@@ -277,14 +277,14 @@ header {
 }
 
 .carousel, .carousel-item { /* For image slideshow on Gallery page */
-    width: 70vw;
+    width: 70%;
     height: 65vh;
     margin: 0 auto;
 }
 
 .container-wrapper {
     background-color: #bebbbb;
-    width: 100vw;
+    width: 100%;
 }
 
 form {
